syntax = "proto3";

package authentication;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (TokenValidationResponse);
  rpc GetAdminToken (Empty) returns (AdminTokenResponse);
}

message Empty {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  string tokenType = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message TokenValidationResponse {
  bool valid = 1;
  string userId = 2;
  string email = 3;
  string givenName = 4;
  string familyName = 5;
  repeated string roles = 6;
}

message AdminTokenResponse {
  string token = 1;
}